--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"start": "parcel src/playground/index.html"
 	},
 	"dependencies": {
+		"effector": "^20.13.7",
 		"query-string": "^6.12.1"
 	}
 }
